--- a/styles/pagina-inicial/header.css
+++ b/styles/pagina-inicial/header.css
@@ -17,11 +17,19 @@
     color: var(--preto);
     font-size: 23px;
     font-weight: 700;
+    display: flex;
+    align-items: center;
 }
 
 .cabecalho__logo-final {
+    border: none;
+    background: transparent;
+    font-family: var(--fonte-principal);
     font-weight: 300;
     font-style: italic;
+    font-size: 23px;
+    padding: 0;
+    cursor: pointer;
 }
 
 .cabecalho__container-opcoes {
