--- a/styles/pomodoro/header.css
+++ b/styles/pomodoro/header.css
@@ -14,13 +14,18 @@ body {
 }
 
 #video-bg {
-    width: 110%;
+    width: 118%;
     position: fixed;
     top: 0;
     left: 0;
     min-width: 100%;
     min-height: 100%;
     z-index: -1; /* Coloca o vídeo atrás do conteúdo da página */
+}
+
+a {
+    text-decoration: none;
+    color: var(--preto);
 }
 
 .cabecalho {
@@ -45,6 +50,93 @@ span {
     color: var(--btn-color);
 }
 
-.pomodoro__container-card {
+span:hover {
+    color: red;
+    cursor: pointer;
+}
 
+.pomodoro__container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* opacity: 0.5; */
+}
+
+.pomodoro__container button {
+    opacity: 1.5;
+}
+
+.pomodoro__container-card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 4em;
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 40%;
+    height: 80vh;
+    border-radius: 8px 0 0 8px;
+    box-shadow: 0px 0px 15px solid rgba(0, 0, 0, 0.7);
+}
+
+.left {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.right {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 0 8px 8px 0;
+}
+
+.pomodoro-card-botoes {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 70%;
+    margin-bottom: 3em;
+}
+
+.pomodoro-card-button {
+    color: var(--titulo-color);
+    font-size: 16px;
+    font-weight: 700;
+    padding: 1em;
+    border-radius: 8px;
+    border: none;
+}
+
+.pomodoro-card-button-comecar {
+    color: var(--titulo-color);
+    font-size: 16px;
+    font-weight: 700;
+    padding: 1em;
+    border-radius: 8px;
+    border: none;
+}
+
+.active {
+    background-color: var(--btn-color);
+    color: var(--titulo-color);
+}
+
+.temporizador {
+    font-size: 8em;
+    margin-top: 0.2;
+    margin-bottom: 0.5em;
+    color: var(--titulo-color);
+}
+
+
+.comecar {
+    text-transform: uppercase;
+    padding: 1em 3em;
+}
+
+.pomodoro-left-card-titulo {
+    font-size: 2.8em;
+    color: var(--cor-clara);
 }
