--- a/styles/pomodoro/pomodoro.css
+++ b/styles/pomodoro/pomodoro.css
@@ -28,20 +28,67 @@ a {
     color: var(--preto);
 }
 
+.active-nav {
+    font-family: var(--fonte-secundaria);
+    width: 100%;
+    height: 100vh;
+}
+
 .cabecalho {
     display: flex;
     align-items: center;
-    justify-content: center;
-    box-shadow: none;
-    padding: 0.6em;
-    background-color: var(--branco);
-    opacity: 0.8;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
 }
 
-.cabecalho-titulo {
-    font-size: 2em;
-    font-family: var(--fonte-titulo);
+.cabecalho__container-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1em;
+}
+
+.cabecalho__container-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 3em;
+}
+
+.cabecalho__logo {
+    text-decoration: none;
+    color: var(--titulo-color);
+    font-size: 23px;
     font-weight: 700;
+    display: flex;
+    align-items: center;
+}
+
+.cabecalho__logo-final {
+    border: none;
+    background: transparent;
+    font-family: var(--fonte-titulo);
+    color: var(--branco);
+    font-style: italic;
+    font-size: 23px;
+    cursor: pointer;
+}
+
+.cabecalho__container-opcoes {
+    margin-right: 4em;
+}
+
+.cabecalho_opcoes-link {
+    font-family: var(--fonte-secundaria);
+    text-decoration: none;
+    color: var(--branco);
+    font-size: 14px;
+    font-weight: 300;
+    margin-left: 1em;
+}
+
+.cabecalho_opcoes-link:hover, .cabecalho__logo-final:hover{
+    color: var(--preto);
 }
 
 span {
@@ -95,8 +142,8 @@ span:hover {
 .pomodoro-card-botoes {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    width: 70%;
+    justify-content: space-around;
+    width: 80%;
     margin-bottom: 3em;
 }
 
@@ -104,7 +151,7 @@ span:hover {
     color: var(--titulo-color);
     font-size: 16px;
     font-weight: 700;
-    padding: 1em;
+    padding: 0.9em;
     border-radius: 8px;
     border: none;
 }
