--- a/styles/pagina-inicial/header.css
+++ b/styles/pagina-inicial/header.css
@@ -12,6 +12,13 @@
     padding: 1em;
 }
 
+.cabecalho__container-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 3em;
+} 
+
 .cabecalho__logo {
     text-decoration: none;
     color: var(--preto);
