Imagens do carrossel do Swiper alteradas

--- a/jogos/numeroSecreto.css
+++ b/jogos/numeroSecreto.css
@@ -28,6 +28,63 @@ h3 {
     font-size: 2em;
 }
 
+.cabecalho {
+    display: flex;
+    align-items: center;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+}
+
+.cabecalho__container-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 1em;
+}
+
+.cabecalho__container-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 3em;
+} 
+
+.cabecalho__logo {
+    text-decoration: none;
+    color: var(--preto);
+    font-size: 23px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+}
+
+.cabecalho__logo-final {
+    border: none;
+    background: transparent;
+    font-family: var(--fonte-principal);
+    font-weight: 300;
+    font-style: italic;
+    font-size: 23px;
+    padding: 0;
+    cursor: pointer;
+}
+
+.cabecalho__container-opcoes {
+    margin-right: 1.6em;
+}
+
+.cabecalho_opcoes-link {
+    text-decoration: none;
+    color: var(--preto);
+    font-size: 14px;
+    font-weight: 300;
+    margin-left: 1em;
+}
+
+.cabecalho_opcoes-link:hover, .cabecalho__logo-final:hover{
+    color: var(--branco);
+}
+
 .mensagem {
     font-size: 1.5em;
     margin-top: 40px;
