Editando a logo do Jogo Numero Secreto

--- a/jogos/numeroSecreto.css
+++ b/jogos/numeroSecreto.css
@@ -4,6 +4,7 @@
     --font-family: 'Montserrat', sans-serif;
     --bg-color: #0AA1DD;
     --primary-color: #E8F9FD;
+    --titulo-color: #191919;
 }
 
 body {
@@ -75,13 +76,17 @@ h3 {
 
 .cabecalho_opcoes-link {
     text-decoration: none;
-    color: var(--preto);
+    color: var(--branco);
     font-size: 14px;
     font-weight: 300;
     margin-left: 1em;
 }
 
-.cabecalho_opcoes-link:hover, .cabecalho__logo-final:hover{
+.cabecalho_opcoes-link:hover{
+    color: var(--titulo-color);
+}
+
+.cabecalho__logo-final:hover {
     color: var(--branco);
 }
 
