--- a/styles/pagina-inicial/styles.css
+++ b/styles/pagina-inicial/styles.css
@@ -1,17 +1,22 @@
 @import url('header.css');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
 :root {
     --fonte-principal: 'Poppins', sans-serif;
     --fonte-secundaria: 'Montserrat', sans-serif;
+    --fonte-tercearia: 'Roboto Mono', monospace;
     --branco: #FFFFFF;
     --preto: #000000;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
     font-family: var(--fonte-principal);
     color: var(--preto);
     font-size: 16px;
-    transition: 2s;
 }
 
 .swiper-button-prev {
@@ -20,4 +25,120 @@ body {
 
 .swiper-button-next {
     color: var(--preto);
+}
+
+.sobre__container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 6em;
+}
+
+.sobre__container-informacoes {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+    margin-top: 4.5em;
+    margin-bottom: 6em;
+}
+
+.sobre__container-conteudo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 35%;
+}
+
+.sobre__container-img {
+    display: flex;
+    width: 30%;
+}
+
+.sobre-titulo {
+    font-size: 2em;
+    font-weight: 700;
+}
+
+img {
+    width: 100%;
+    border-radius: 20px;
+}
+
+p {
+    font-family: var(--fonte-tercearia);
+    line-height: 1.3;
+    margin-bottom: 1em;
+    margin-top: 1em;
+    padding: 1em;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
+    margin-right: 3em;
+}
+
+.sobre__container-projeto {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 1em;
+}
+
+.sobre__container-informacoes-projeto {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+    margin-top: 4em;
+    margin-bottom: 6em;
+}
+
+.sobre__container-conteudo-projeto {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 70%;
+}
+
+.sobre-titulo-projeto {
+    font-size: large;
+    font-weight: 400;
+    margin: 2em 0 1em 0;
+}
+
+.sobre__container-projeto > h2 {
+    font-family: var(--fonte-secundaria);
+}
+
+.rodape {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1em;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+}
+
+.rodape__conteudos {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.rodape__imagem {
+    width: 25px;
+    margin-right: 1em;
+}
+
+.github-titulo {
+    font-weight: 400;
+    font-size: 1em;
+    margin: 0;
+}
+
+strong {
+    font-weight: 700;
 }
