--- a/styles/pagina-inicial/styles.css
+++ b/styles/pagina-inicial/styles.css
@@ -45,13 +45,17 @@ body {
     margin-bottom: 6em;
 }
 
+
 .sobre__container-conteudo {
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
     width: 35%;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
+    margin-right: 2em;
+    border-radius: 15px;
+    padding: 1em;
 }
+
 
 .sobre__container-img {
     display: flex;
@@ -74,7 +78,6 @@ p {
     margin-bottom: 1em;
     margin-top: 1em;
     padding: 1em;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
     margin-right: 3em;
 }
 
@@ -84,6 +87,7 @@ p {
     justify-content: center;
     flex-direction: column;
     margin-top: 1em;
+
 }
 
 .sobre__container-informacoes-projeto {
@@ -98,19 +102,22 @@ p {
 
 .sobre__container-conteudo-projeto {
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
+    padding: 3em;
     width: 70%;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
 }
 
 .sobre-titulo-projeto {
+    display: flex;
+    justify-content: center;
     font-size: large;
-    font-weight: 400;
-    margin: 2em 0 1em 0;
+    font-weight: bold;
+    margin: 4em 0 1em 0;
 }
 
-.sobre__container-projeto > h2 {
+.sobre__container-projeto>h2 {
     font-family: var(--fonte-secundaria);
 }
 
@@ -141,4 +148,35 @@ p {
 
 strong {
     font-weight: 700;
+}
+
+.tools {
+    display: flex;
+    align-items: center;
+    padding: 9px;
+}
+
+.circle {
+    padding: 0 4px;
+}
+
+.box {
+    display: inline-block;
+    align-items: center;
+    width: 10px;
+    height: 10px;
+    padding: 1px;
+    border-radius: 50%;
+}
+
+.red {
+    background-color: #ff605c;
+}
+
+.yellow {
+    background-color: #ffbd44;
+}
+
+.green {
+    background-color: #00ca4e;
 }
