--- a/pomodoro/pomodoro.css
+++ b/pomodoro/pomodoro.css
@@ -123,6 +123,7 @@ span:hover {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
     margin-top: 4em;
     background-color: rgba(255, 255, 255, 0.5);
     width: 40%;
@@ -138,8 +139,7 @@ span:hover {
 }
 
 .right {
-    display: flex;
-    align-items: center;
+    display: block;
     flex-direction: column;
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 0 8px 8px 0;
@@ -190,6 +190,47 @@ span:hover {
 }
 
 .pomodoro-left-card-titulo {
-    font-size: 2.8em;
+    font-size: 2em;
     color: var(--cor-clara);
+    margin-bottom: 0.4em;
+}
+
+
+#tarefa-input {
+    color: var(--titulo-color);
+    font-size: 16px;
+    font-weight: 700;
+    padding: 0.9em;
+    border-radius: 8px;
+    border: none;
+}
+
+
+
+.tarefas-pomodoro {
+    display: block;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 90%;
+    height: 100%;
+    padding: 2em;
+}
+
+.tarefas-pomodoro-input {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#tarefa-input {
+    border-radius: 8px 0 0 8px;
+}
+
+#btn-pomodoro {
+    border-radius: 0 8px 8px 0;
+}
+
+li {
+    background-color: #C7CBCC;
 }
