--- a/styles/pagina-inicial/styles.css
+++ b/styles/pagina-inicial/styles.css
@@ -1,10 +1,10 @@
 @import url('header.css');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 :root {
     --fonte-principal: 'Poppins', sans-serif;
-    --fonte-secundaria: 'Montserrat', sans-serif;
-    --fonte-tercearia: 'Roboto Mono', monospace;
+    --fonte-secundaria: 'ubuntu', sans-serif;
+    --fonte-tercearia: 'inter', monospace;
     --branco: #FFFFFF;
     --preto: #000000;
 }
@@ -19,12 +19,9 @@ body {
     font-size: 16px;
 }
 
-.swiper-button-prev {
-    color: var(--preto);
-}
-
-.swiper-button-next {
-    color: var(--preto);
+p {
+    text-indent: 20px;
+    line-height: 50px;
 }
 
 .sobre__container {
@@ -43,6 +40,7 @@ body {
     height: auto;
     margin-top: 4.5em;
     margin-bottom: 6em;
+    gap: 30px;
 }
 
 
@@ -50,26 +48,25 @@ body {
     display: flex;
     flex-direction: column;
     width: 35%;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
-    margin-right: 2em;
-    border-radius: 15px;
+    border-radius: 8px;
     padding: 1em;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
 
 .sobre__container-img {
     display: flex;
-    width: 30%;
+    width: 25%;
 }
 
 .sobre-titulo {
-    font-size: 2em;
-    font-weight: 700;
+    font-family: 'ubuntu';
+    font-size: 2rem;
+    font-weight: 400;
 }
 
 img {
-    width: 100%;
-    border-radius: 20px;
+    border-radius: 8px;
 }
 
 p {
@@ -96,16 +93,16 @@ p {
     justify-content: center;
     width: 100%;
     height: auto;
-    margin-top: 4em;
-    margin-bottom: 6em;
+    margin-top: 3em;
+    margin-bottom: 5em;
 }
 
 .sobre__container-conteudo-projeto {
     display: flex;
     flex-direction: column;
     padding: 3em;
-    width: 70%;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
+    width: 58%;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
     border-radius: 15px;
 }
 
@@ -125,8 +122,7 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 1em;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+    padding: 3em;
 }
 
 .rodape__conteudos {
