--- a/styles/pagina-inicial/header.css
+++ b/styles/pagina-inicial/header.css
@@ -55,3 +55,64 @@
 .cabecalho_opcoes-link:hover, .cabecalho__logo-final:hover{
     color: red;
 }
+
+@media (max-width: 768px) {
+    .cabecalho__container-nav {
+        flex-direction: column;
+        padding: 1rem;
+    }
+
+    .cabecalho__container-logo {
+        margin-right: 0;
+        margin-bottom: 1em;
+    }
+
+    .cabecalho__logo {
+        font-size: 20px;
+    }
+
+    .cabecalho__logo-final {
+        font-size: 20px;
+    }
+
+    .cabecalho_opcoes-link {
+        font-size: 16px;
+        margin-left: 0.8em;
+    }
+
+    .cabecalho__container-opcoes {
+        margin-right: 0;
+        margin-top: 1em;
+    }
+}
+
+/* For devices with a max width of 480px (mobile phones) */
+@media (max-width: 480px) {
+    .cabecalho__logo {
+        font-size: 18px;
+    }
+
+    .cabecalho__logo-final {
+        font-size: 18px;
+    }
+
+    .cabecalho_opcoes-link {
+        font-size: 12px;
+        margin-left: 0.5em;
+    }
+
+    .cabecalho__container-nav {
+        flex-direction: column;
+        padding: 1rem;
+    }
+
+    .cabecalho__container-logo {
+        margin-right: 0;
+        margin-bottom: 1em;
+    }
+
+    .cabecalho__container-opcoes {
+        margin-right: 0;
+        margin-top: 1em;
+    }
+}
