--- a/styles/pagina-inicial/styles.css
+++ b/styles/pagina-inicial/styles.css
@@ -11,6 +11,7 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
@@ -20,8 +21,8 @@ body {
 }
 
 p {
-    text-indent: 20px;
     line-height: 50px;
+    padding: 3rem;
 }
 
 .sobre__container {
@@ -47,27 +48,39 @@ p {
 .sobre__container-conteudo {
     display: flex;
     flex-direction: column;
-    width: 35%;
-    border-radius: 8px;
-    padding: 1em;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    justify-content: center;
+    align-items: center;
+    width: 58%;
+    border-radius: 1rem;
+    padding: 3em;
+    gap: 1rem;
+    transition: 0.5s ease-in-out;
+}
+
+.sobre__container-conteudo:hover {
+    transform: scale(1.02);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
 }
 
 
 .sobre__container-img {
     display: flex;
-    width: 25%;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    border-radius: 1rem;
 }
 
 .sobre-titulo {
     font-family: 'ubuntu';
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 400;
 }
 
-img {
-    border-radius: 8px;
+.sobre__container-img img {
+    border-radius: 2rem;
 }
+
 
 p {
     font-family: var(--fonte-tercearia);
@@ -84,7 +97,7 @@ p {
     justify-content: center;
     flex-direction: column;
     margin-top: 1em;
-
+    
 }
 
 .sobre__container-informacoes-projeto {
@@ -95,15 +108,27 @@ p {
     height: auto;
     margin-top: 3em;
     margin-bottom: 5em;
+    transition: 0.3s ease-in-out;
 }
+
+.sobre__container-informacoes-projeto:hover {
+    transform: scale(1.02);
+}
+
+
 
 .sobre__container-conteudo-projeto {
     display: flex;
     flex-direction: column;
-    padding: 3em;
+    padding: 2em;
     width: 58%;
+    border-radius: 1rem;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    transition: 0.3s ease-in-out;
+}
+
+.sobre__container-conteudo-projeto:hover {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
-    border-radius: 15px;
 }
 
 .sobre-titulo-projeto {
@@ -149,7 +174,7 @@ strong {
 .tools {
     display: flex;
     align-items: center;
-    padding: 9px;
+    padding: 1rem;
 }
 
 .circle {
@@ -187,17 +212,13 @@ strong {
         padding: 1.5em;
     }
 
-    .sobre__container-img {
-        width: 85%;
-    }
-
     .sobre__container-informacoes {
         flex-direction: column;
         gap: 20px;
     }
 
     .sobre__container-conteudo-projeto {
-        width: 90%;
+        width: 80%;
         padding: 2em;
     }
 
@@ -227,7 +248,6 @@ strong {
 
     .sobre__container-conteudo {
         width: 80%;
-        padding: 1.5em;
     }
 
     .sobre__container-img {
@@ -268,9 +288,6 @@ strong {
         font-size: 12px;
     }
 
-    .sobre__container-img {
-        width: 88%;
-    }
 
     .tools {
         flex-direction: row;
