--- a/styles/pagina-inicial/swiper.css
+++ b/styles/pagina-inicial/swiper.css
@@ -2,6 +2,7 @@
     margin-top: 100px;
     width: 55%;
     border-radius: 20px;
+    background-color: antiquewhite;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
@@ -17,6 +18,7 @@
 }
 
 img {
+    border-radius: 0 0 20px;
     width: 100%;
 }
 
